--- a/css/style.css
+++ b/css/style.css
@@ -415,31 +415,60 @@ header.b .logo img {
     text-align: center;
     position: relative;
     margin: auto;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     margin-top: 2rem;
     width: 70%;
+}
+
+.about .container .box:nth-child(odd) {
+    right: 50%;
+    transform: translateX(34%);
 
 }
 
-.about .container .box:not(:last-child):after {
+.about .container .box:nth-child(even) {
+    left: 50%;
+    transform: translateX(-34%);
 
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 0.1rem;
-    background-color: #eee;
-    bottom: -2rem;
+}
+
+
+
+.about .container .box .img {
+    position: relative;
 }
 
 .about .container .box img {
 
     border-radius: 50%;
     width: 9rem;
-    border: 0.3rem solid #ecdcec;
+    border: 0.3rem solid var(--bs-yellow);
+    position: relative;
 
 }
 
+.about .container .box .img:after {
 
+    content: "";
+    position: absolute;
+    border-width: 27px;
+    border-style: solid;
+    border-color: transparent transparent transparent var(--bs-yellow);
+    display: block;
+    z-index: -1;
+    top: 44px;
+    right: -40px;
+
+}
+
+.about .container .box.left .img:after {
+    border-color: transparent var(--bs-yellow) transparent transparent;
+
+    top: 44px;
+    right: auto;
+    left: -40px;
+
+}
 
 
 .about .container .box .info {
@@ -478,7 +507,15 @@ header.b .logo img {
     width: 14rem;
     border-radius: 50%;
     border: 0.5rem solid rgb(0 0 0 / 10%);
+    cursor: pointer;
+    transition: 0.5s;
 
+}
+
+.team .container .boxs .box:hover img {
+    border: 0.5rem solid transparent;
+    scale: 1.03;
+    box-shadow: 0 0 10px 2px var(--bs-yellow);
 }
 
 .team .container .boxs .box h1 {
@@ -600,8 +637,9 @@ header.b .logo img {
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    border: 1px solid transparent;
     font-family: var(--ff1);
+    transition: 0.2s;
+    outline: 3px solid transparent;
 }
 
 .contact .container form .box textarea {
@@ -622,7 +660,7 @@ header.b .logo img {
 .contact .container form .box>div input:focus,
 .contact .container form .box textarea:focus {
 
-    border: 1px solid var(--bs-yellow);
+    outline: 3px solid var(--bs-yellow);
 }
 
 
