--- a/css/style.css
+++ b/css/style.css
@@ -453,10 +453,13 @@ header.b .logo img {
     position: absolute;
     border-width: 27px;
     border-style: solid;
-    border-color: transparent transparent transparent var(--bs-yellow);
     display: block;
     z-index: -1;
     top: 44px;
+}
+
+.about .container .box.right .img:after {
+    border-color: transparent transparent transparent var(--bs-yellow);
     right: -40px;
 
 }
@@ -464,8 +467,6 @@ header.b .logo img {
 .about .container .box.left .img:after {
     border-color: transparent var(--bs-yellow) transparent transparent;
 
-    top: 44px;
-    right: auto;
     left: -40px;
 
 }
@@ -775,6 +776,12 @@ footer .container .privacy {
         font-size: 13px;
 
     }
+
+    .about .container .box .img:after {
+        top: 34px;
+    }
+
+
 }
 
 @media(max-width:767px) {
@@ -800,6 +807,45 @@ footer .container .privacy {
     .contact .container .box>div {
         margin-bottom: 1rem;
     }
+
+    .about .container .box .img:after {
+        top: 19px;
+        left: 74px;
+        right: 74px;
+    }
+
+}
+
+@media(max-width:500px) {
+
+    .about .container {
+        text-align: center;
+    }
+
+    .about .container .box {
+        flex-direction: column;
+        left: auto !important;
+        right: auto !important;
+        transform: translateX(0) !important;
+        margin-bottom: 2rem;
+        text-align: center;
+        align-items: center;
+    }
+
+    .about .container .box.left {
+        flex-direction: column-reverse;
+
+    }
+
+    .about .container .box .info {
+        text-align: center !important;
+        padding: 0;
+    }
+
+    .about .container .box .img:after {
+        display: none;
+    }
+
 
 }
 
